tools/crates/vendor/toml_edit/tests/fixtures/invalid/string/no-close-4.stderr
TOML parse error at line 1, column 29
  |
1 | 'a-string'.must-be = 'closed
  |                             ^
invalid literal string
